--- a/gagne.html
+++ b/gagne.html
@@ -1,5 +1,22 @@
-<h1> WIN </h1>
-<img src="https://thumbs.gfycat.com/PlainJubilantBunny-size_restricted.gif">
-<img src="https://thumbs.gfycat.com/PlainJubilantBunny-size_restricted.gif">
-<img src="https://thumbs.gfycat.com/PlainJubilantBunny-size_restricted.gif">
-<img src="https://thumbs.gfycat.com/PlainJubilantBunny-size_restricted.gif">
+<!DOCTYPE html>
+<html lang="en">
+<head>
+  
+  <!--  Meta  -->
+  <meta charset="UTF-8" />
+  <title>Unserious Game</title>
+  
+  <!--  Styles  -->
+  <link rel="stylesheet" href="styles/style.css">
+</head>
+<body style="background-color:#ffff66">
+  <img class="yeah" src="https://media3.giphy.com/media/x0wfpJqZ1Qtbi/giphy.gif">
+  <h1>Good Job!</h1>
+  <h2>You are a genius</h2>
+  
+  <br>
+  <a href="index2.html">Continue ton ascention!</a>
+  <!-- Scripts -->
+  <script src="scripts/index.js"></script>
+</body>
+</html>
