--- a/index2.html
+++ b/index2.html
@@ -4,19 +4,23 @@
   
   <!--  Meta  -->
   <meta charset="UTF-8" />
-  <title>My New Pen!</title>
+  <title>Unserious Game</title>
   
   <!--  Styles  -->
-  <link rel="stylesheet" href="styles/index.processed.css">
+  <link rel="stylesheet" href="styles/style.css">
 </head>
-<body>
+<body style="background-color:#000000">
+  <img src="https://i.pinimg.com/originals/b1/cb/a9/b1cba9006649d0cd75d3e2c2b66bc996.gif">
+  <h1 style="color:#ffff33">Quelle âge à notre Soleil?</h1>
   
-  <h1> Quelle âge à notre Soleil? </h1>
-  
-  <a href="perdu.html" target="_blank"> 1,7 milliards d'années </a> <br>
-  <a href="perdu.html" target="_blank"> 13,2 milliards d'années </a> <br>
-  <a href="perdu.html" target="_blank"> 7,5 milliards d'années </a> <br>
-  <a href="gagne.html" target="_blank"> 4,6 milliards d'années </a> <br>
+  <br>
+  <a style="color:#ff1919" href="perdu2.html">1,7 milliards d'années</a>
+  <br><br>
+  <a style="color:#ff1919" href="perdu2.html">13,2 milliards d'années</a> 
+  <br><br>
+  <a style="color:#ff1919" href="perdu2.html">7,5 milliards d'années</a> 
+  <br><br>
+  <a style="color:#ff1919" href="gagne2.html">4,6 milliards d'années</a>
   
   <!-- Scripts -->
   <script src="scripts/index.js"></script>
