--- a/perdu.html
+++ b/perdu.html
@@ -1,2 +1,20 @@
-<h1> PERDU </h1>
-<img src="https://i.pinimg.com/originals/67/a5/71/67a5719299e6456cf2be10223475d24c.gif">
+<!DOCTYPE html>
+<html lang="en">
+<head>
+  
+  <!--  Meta  -->
+  <meta charset="UTF-8" />
+  <title>Unserious Game</title>
+  
+  <!--  Styles  -->
+  <link rel="stylesheet" href="styles/style.css">
+</head>
+<body style="background-color:#000000">
+  <img src="https://media3.giphy.com/media/hARP4DcB3vy1y/giphy.gif">
+  <h1 style="color:#993300">Revois tes classiques</h1>  
+  <br>
+  <a href="index.html">Essaye encore</a>
+  <!-- Scripts -->
+  <script src="scripts/index.js"></script>
+</body>
+</html>
