--- a/perdu.html
+++ b/perdu.html
@@ -11,7 +11,7 @@
 </head>
 <body style="background-color:#000000">
   <img src="https://media3.giphy.com/media/hARP4DcB3vy1y/giphy.gif">
-  <h1 style="color:#993300">Revois tes classiques</h1>  
+  <h1 style="color:#993300">T'as le cerveau qui chauffe?</h1>  
   <br>
   <a href="index.html">Essaye encore</a>
   <!-- Scripts -->
