--- a/perdu.html
+++ b/perdu.html
@@ -11,9 +11,9 @@
 </head>
 <body style="background-color:#000000">
   <img src="https://media3.giphy.com/media/hARP4DcB3vy1y/giphy.gif">
-  <h1 style="color:#993300">T'as le cerveau qui chauffe?</h1>  
+  <h1 style="color:#993300">Manqué! T'as le cerveau qui chauffe?</h1>  
   <br>
-  <a href="index.html">Essaye encore</a>
+  <a href="index.html">Bois un grand verre d'eau et essaye encore!</a>
   <!-- Scripts -->
   <script src="scripts/index.js"></script>
 </body>
