--- a/gagne2.html
+++ b/gagne2.html
@@ -15,7 +15,7 @@
   <h2 style="color:#FFFF66">Tu rayonne comme le Soleil</h2>
   
   <br>
-  <a style="color:#ffffff" href="index2.html">Continue ton ascention!</a>
+  <a style="color:#ffffff" href="https://DavidBorie.github.io/Unserious_game/index.html">Continue ton ascention!</a>
   <!-- Scripts -->
   <script src="scripts/index.js"></script>
 </body>
