--- a/index2.html
+++ b/index2.html
@@ -7,21 +7,24 @@
   <title>Unserious Game</title>
   
   <!--  Styles  -->
+  <meta content="width=device-width,initial-scale=1.0, maximum-scale=1.0, user-scalable=0" name="viewport">
   <link rel="stylesheet" href="styles/style.css">
+  <link rel="stylesheet" media="screen and (max-width: 600px)" href="styles/phone.css">
 </head>
 <body style="background-color:#000000">
   <img src="https://i.pinimg.com/originals/b1/cb/a9/b1cba9006649d0cd75d3e2c2b66bc996.gif">
   <h1 style="color:#ffff33">Quelle âge à notre Soleil?</h1>
   
-  <br>
-  <a style="color:#ff1919" href="perdu2.html">1,7 milliards d'années</a>
-  <br><br>
-  <a style="color:#ff1919" href="perdu2.html">13,2 milliards d'années</a> 
-  <br><br>
-  <a style="color:#ff1919" href="perdu2.html">7,5 milliards d'années</a> 
-  <br><br>
-  <a style="color:#ff1919" href="gagne2.html">4,6 milliards d'années</a>
-  
+  <div class="btns-list">
+    <a class="btn" style="color:#ff1919" href="perdu2.html">1,7 milliards d'années</a> 
+    <br><br>
+    <a class="btn" style="color:#ff1919" href="perdu2.html">13,2 milliards d'années</a> 
+    <br><br>
+    <a class="btn" style="color:#ff1919" href="perdu2.html">7,5 milliards d'années</a> 
+    <br><br>
+    <a class="btn" style="color:#ff1919" href="gagne2.html">4,6 milliards d'années</a> 
+    <br><br>
+  </div>
   <!-- Scripts -->
   <script src="scripts/index.js"></script>
 </body>
