--- a/gagne2.html
+++ b/gagne2.html
@@ -11,8 +11,8 @@
 </head>
 <body style="background-color:#00041A">
   <img class="yeah" src="https://i.gifer.com/4uwy.gif">
-  <h1 style="color:#FFFF66"> Good Job!</h1>
-  <h2 style="color:#FFFF66">Tu rayonne comme le Soleil</h2>
+  <h1 style="color:#FFFF66"> Bon travail!</h1>
+  <h2 style="color:#FFFF66">Tu rayonnes comme le Soleil</h2>
   
   <br>
   <a style="color:#ffffff" href="https://DavidBorie.github.io/Unserious_game/index.html">Continue ton ascention!</a>
