--- a/gagne2.html
+++ b/gagne2.html
@@ -12,7 +12,7 @@
 <body style="background-color:#00041A">
   <img class="yeah" src="https://i.gifer.com/4uwy.gif">
   <h1 style="color:#FFFF66"> Bon travail!</h1>
-  <h2 style="color:#00075E">Tu rayonnes comme le Soleil</h2>
+  <h2 style="color:#FF150C">Tu rayonnes comme le Soleil</h2>
   
   <br>
   <a style="color:#ffffff" href="https://DavidBorie.github.io/Unserious_game/index.html">Continue ton ascention!</a>
