--- a/gagne2.html
+++ b/gagne2.html
@@ -7,15 +7,19 @@
   <title>Unserious Game</title>
   
   <!--  Styles  -->
+  <meta content="width=device-width,initial-scale=1.0, maximum-scale=1.0, user-scalable=0" name="viewport">
   <link rel="stylesheet" href="styles/style.css">
+  <link rel="stylesheet" media="screen and (max-width: 600px)" href="styles/phone.css">
 </head>
 <body style="background-color:#00041A">
   <img class="yeah" src="https://i.gifer.com/4uwy.gif">
   <h1 style="color:#FFFF66"> Bon travail!</h1>
   <h2 style="color:#FF0000">Tu rayonnes comme le Soleil</h2>
+
+<div class="btns-list">
+  <a class="btn" style="color:#ffffff" href="https://DavidBorie.github.io/Unserious_game/index.html">Continue ton ascention!</a>
+</div>
   
-  <br>
-  <a style="color:#ffffff" href="https://DavidBorie.github.io/Unserious_game/index.html">Continue ton ascention!</a>
   <!-- Scripts -->
   <script src="scripts/index.js"></script>
 </body>
