--- a/gagne2.html
+++ b/gagne2.html
@@ -17,7 +17,7 @@
   <h2 style="color:#FF0000">Tu rayonnes comme le Soleil</h2>
 
 <div class="btns-list">
-  <a class="btn" style="color:#ffffff" href="https://DavidBorie.github.io/Unserious_game/index.html">Continue ton ascention!</a>
+  <a class="btn" style="color:#C81FF2" href="https://DavidBorie.github.io/Unserious_game/index.html">Continue ton ascention!</a>
 </div>
   
   <!-- Scripts -->
