--- a/gagne2.html
+++ b/gagne2.html
@@ -14,10 +14,10 @@
 <body style="background-color:#00041A">
   <img class="yeah" src="https://i.gifer.com/4uwy.gif">
   <h1 style="color:#FFFF66"> Bon travail!</h1>
-  <h2 style="color:#000000">Tu rayonnes comme le Soleil</h2>
+  <h2 style="color:#FF0000">Tu rayonnes comme le Soleil</h2>
 
 <div class="btns-list">
-  <a class="btn" style="color:#C81FF2" href="https://DavidBorie.github.io/Unserious_game/index.html">Continue ton ascention!</a>
+  <a class="btn" style="color:#FFFFFF" href="https://DavidBorie.github.io/Unserious_game/index.html">Continue ton ascention!</a>
 </div>
   
   <!-- Scripts -->
