--- a/perdu2.html
+++ b/perdu2.html
@@ -7,13 +7,17 @@
   <title>Unserious Game</title>
   
   <!--  Styles  -->
+  <meta content="width=device-width,initial-scale=1.0, maximum-scale=1.0, user-scalable=0" name="viewport">
   <link rel="stylesheet" href="styles/style.css">
+  <link rel="stylesheet" media="screen and (max-width: 600px)" href="styles/phone.css">
 </head>
 <body style="background-color:#000000">
   <img src="https://64.media.tumblr.com/tumblr_lyw2m7RNMd1qzguyto3_r1_250.gif">
   <h1 style="color:#ff1919">BOOOOOOOOM!!! Tout le monde est mort.</h1>  
-  <br>
-  <a style="color:#ffffff" href="index2.html">Soyons fou! On s'accorde une nouvelle chance?</a>
+  
+ <div class="btns-list">
+  <a class="btn" style="color:#ffffff" href="index2.html">Soyons fou! On s'accorde une nouvelle chance?</a>
+  </div>   
   <!-- Scripts -->
   <script src="scripts/index.js"></script>
 </body>
