--- a/perdu2.html
+++ b/perdu2.html
@@ -17,7 +17,7 @@
   <h2 style="color:#ff1919">Tout le monde est mort.</h2>
   
  <div class="btns-list">
-  <a class="btn" style="color:#ffffff" href="index2.html">Soyons fou! On s'accorde une nouvelle chance?</a>
+  <a class="btn" style="color:#ffffff" href="index2.html">Soyons fous! On s'accorde une nouvelle chance?</a>
   </div>   
   <!-- Scripts -->
   <script src="scripts/index.js"></script>
