--- a/perdu2.html
+++ b/perdu2.html
@@ -13,7 +13,7 @@
 </head>
 <body style="background-color:#000000">
   <img src="https://64.media.tumblr.com/tumblr_lyw2m7RNMd1qzguyto3_r1_250.gif">
-  <h1 style="color:#B812129">BOOOOOOOOM!!!</h1>
+  <h1 style="color:#B81212">BOOOOOOOOM!!!</h1>
   <h2 style="color:#ff1919">Tout le monde est mort.</h2>
   
  <div class="btns-list">
