--- a/gagne.html
+++ b/gagne.html
@@ -14,8 +14,9 @@
   <h1>Good Job!</h1>
   <h2>You are a genius</h2>
   
-  <br>
-  <a href="index2.html">Continue ton ascention!</a>
+ <div class="btns-list">
+  <a class="btn" href="index2.html">Continue ton ascention!</a>
+ </div>
   <!-- Scripts -->
   <script src="scripts/index.js"></script>
 </body>
