--- a/gagne.html
+++ b/gagne.html
@@ -15,7 +15,7 @@
   <h2>You are a genius</h2>
   
  <div class="btns-list">
-  <a class="btn" href="index2.html">Continue ton ascention!</a>
+  <a class="btn" href="index2.html">Continue ton ascension!</a>
  </div>
   <!-- Scripts -->
   <script src="scripts/index.js"></script>
