--- a/gagne.html
+++ b/gagne.html
@@ -11,7 +11,7 @@
 </head>
 <body style="background-color:#ffff66">
   <img class="yeah" src="https://media3.giphy.com/media/x0wfpJqZ1Qtbi/giphy.gif">
-  <h1>Good Job!</h1>
+  <h1 style="color:#FFFF00">Good Job!</h1>
   <h2>You are a genius</h2>
   
  <div class="btns-list">
