--- a/index.html
+++ b/index.html
@@ -22,6 +22,9 @@
     <a class="btn" href="perdu.html">9999999</a>
   </div>
 
+  <div class="signature">
+    <a href="#">Mickaël FP</a>
+  </div>
   <!-- Scripts -->
   <script src="scripts/index.js"></script>
 </body>
