--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
   </div>
 
   <div class="signature">
-    <a href="#">Mickaël FP</a>
+    <a href="#">Mickaël FLAESCH-PERREAU</a>
   </div>
   <!-- Scripts -->
   <script src="scripts/index.js"></script>
