--- a/perdu.html
+++ b/perdu.html
@@ -5,6 +5,7 @@
   <!--  Meta  -->
   <meta charset="UTF-8" />
   <title>Unserious Game</title>
+  <link rel="icon" href="https://media3.giphy.com/media/hARP4DcB3vy1y/giphy.gif">
   
   <!--  Styles  -->
   <link rel="stylesheet" href="styles/style.css">
@@ -16,6 +17,10 @@
  <div class="btns-list">
   <a class="btn" href="index.html">Bois un grand verre d'eau et essaye encore!</a>
  </div>
+
+ <div class="signature">
+  <a href="#">Mickaël FLAESCH-PERREAU</a>
+</div>
   <!-- Scripts -->
   <script src="scripts/index.js"></script>
 </body>
