--- a/perdu2.html
+++ b/perdu2.html
@@ -5,7 +5,8 @@
   <!--  Meta  -->
   <meta charset="UTF-8" />
   <title>Unserious Game</title>
-  
+  <link rel="icon" href="https://64.media.tumblr.com/tumblr_lyw2m7RNMd1qzguyto3_r1_250.gif">
+
   <!--  Styles  -->
   <meta content="width=device-width,initial-scale=1.0, maximum-scale=1.0, user-scalable=0" name="viewport">
   <link rel="stylesheet" href="styles/style.css">
@@ -18,7 +19,11 @@
   
  <div class="btns-list">
   <a class="btn" style="color:#ffffff" href="index2.html">Soyons fous! On s'accorde une nouvelle chance?</a>
-  </div>   
+  </div>  
+  
+  <div class="signature">
+    <a href="#">Mickaël FLAESCH-PERREAU</a>
+  </div>
   <!-- Scripts -->
   <script src="scripts/index.js"></script>
 </body>
