--- a/gagne.html
+++ b/gagne.html
@@ -5,6 +5,7 @@
   <!--  Meta  -->
   <meta charset="UTF-8" />
   <title>Unserious Game</title>
+  <link rel="icon" href="https://media3.giphy.com/media/x0wfpJqZ1Qtbi/giphy.gif">
   
   <!--  Styles  -->
   <link rel="stylesheet" href="styles/style.css">
@@ -17,6 +18,10 @@
  <div class="btns-list">
   <a class="btn" href="index2.html">Continue ton ascension!</a>
  </div>
+
+ <div class="signature">
+  <a href="#">Mickaël FLAESCH-PERREAU</a>
+</div>
   <!-- Scripts -->
   <script src="scripts/index.js"></script>
 </body>
