--- a/gagne2.html
+++ b/gagne2.html
@@ -5,6 +5,7 @@
   <!--  Meta  -->
   <meta charset="UTF-8" />
   <title>Unserious Game</title>
+  <link rel="icon" href="https://i.gifer.com/4uwy.gif">
   
   <!--  Styles  -->
   <meta content="width=device-width,initial-scale=1.0, maximum-scale=1.0, user-scalable=0" name="viewport">
@@ -19,7 +20,10 @@
 <div class="btns-list">
   <a class="btn" style="color:#FFFFFF" href="https://DavidBorie.github.io/Unserious_game/index.html">Continue ton ascension!</a>
 </div>
-  
+
+<div class="signature">
+  <a href="#">Mickaël FLAESCH-PERREAU</a>
+</div>
   <!-- Scripts -->
   <script src="scripts/index.js"></script>
 </body>
