--- a/index2.html
+++ b/index2.html
@@ -5,6 +5,7 @@
   <!--  Meta  -->
   <meta charset="UTF-8" />
   <title>Unserious Game</title>
+  <link rel="icon" href="https://i.pinimg.com/originals/b1/cb/a9/b1cba9006649d0cd75d3e2c2b66bc996.gif">
   
   <!--  Styles  -->
   <meta content="width=device-width,initial-scale=1.0, maximum-scale=1.0, user-scalable=0" name="viewport">
@@ -12,7 +13,7 @@
   <link rel="stylesheet" media="screen and (max-width: 600px)" href="styles/phone.css">
 </head>
 <body style="background-color:#000000">
-  <img src="https://i.pinimg.com/originals/b1/cb/a9/b1cba9006649d0cd75d3e2c2b66bc996.gif">
+  <img src="https://i.pinimg.com/originals/b1/cb/a9/b1cba9006649d0cd75d3e2c2b66bc996.gif" height="426" width="426"> 
   <h1 style="color:#ffff33">Quelle âge à notre Soleil?</h1>
   
   <div class="btns-list">
@@ -25,7 +26,10 @@
     <a class="btn" style="color:#ff1919" href="gagne2.html">4,6 milliards d'années</a> 
     <br><br>
   </div>
-  
+
+  <div class="signature">
+    <a href="#">Mickaël FLAESCH-PERREAU</a>
+  </div>
   <!-- Scripts -->
   <script src="scripts/index.js"></script>
 </body>
