--- a/perdu.html
+++ b/perdu.html
@@ -12,8 +12,9 @@
 </head>
 <body style="background-color:#000000">
   <img src="https://media3.giphy.com/media/hARP4DcB3vy1y/giphy.gif">
-  <h1 style="color:#993300">Manqué! T'as le cerveau en ébullition?</h1>  
-  
+  <h1 style="color:#FF0000"> Manqué! </h1>  
+  <h2 style="color:#FFFF00"> T'as le cerveau en ébullition? </h2>
+    
  <div class="btns-list">
   <a class="btn" href="index.html">Bois un grand verre d'eau et essaye encore!</a>
  </div>
