--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
   </div>
 
   <div class="signature">
-    <a href="#">Mickaël FLAESCH-PERREAU</a>
+    <a href="https://github.com/MickaelFP">Mickaël FLAESCH-PERREAU</a>
   </div>
   <!-- Scripts -->
   <script src="scripts/index.js"></script>
